# leaflets

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  target.csv  train_jobs.bat
label_ml_backend/: model.py
notebooks/: crawling_experiments.ipynb  data-seg.yaml  database_experiments.ipynb  deal_annotations_viz.ipynb  deal_extraction.ipynb  donut_experiments.ipynb  experiments.ipynb  infer_donut.ipynb  ollama_experiments.ipynb  train_yolo.ipynb
paper/: lib.sty  main.aux  main.bbl  main.blg  main.out  main.tex  main_ilyi.aux  main_ilyi.blg  main_ilyi.fdb_latexmk  main_ilyi.fls  main_ilyi.out  main_ilyi.tex  references.bib
report/: main.aux  main.blg  main.out  main.tex
src/application/: main.py
src/application/templates/: base.html  index.html
src/assets/evaluation/: before_ppocr.txt  labeled_deals_all.csv  ocr_evaluation_results_avg_lv1.csv  ocr_evaluation_results_per_entity_lv1.csv  ocr_results.csv
src/crawling/: config.yaml  crawling.py  rm_leaflets_without_metadata.py
src/database/: __init__.py  configs.yaml  create.py  delete.py  extract_deals.py  main.py  queries.py  schema.py  update.py  update_deal_metadata.py  utils.py
src/deal_detection/: predict.py  split_data.py
src/deal_detection/configs/: train_configs.yaml
src/deal_detection/configs/noda/: yolo11m_train_configs.yaml  yolo11s_train_configs.yaml  yolo8m_train_configs.yaml
src/deal_detection/configs/yolov8m_da/: yolo8m_2.yaml  yolo8m_5.yaml
src/deal_detection/evaluation/: metrics_seg_noda.csv
src/deal_detection/label_backend/: .dockerignore  Dockerfile
src/deal_detection/notebooks/: database_experiments.ipynb  deal_annotations_viz.ipynb  evaluate_yolo.ipynb  experiments.ipynb  train_yolo.ipynb  visualize_yolo.ipynb
src/extraction/: dates.txt  extract.py  extract_deals.py  ocr.ipynb
src/extraction/evaluation/: evaluate_ocr-llm_donut_lvlm.py  evaluate_ocr.py  evaluate_ocr_llm.py
src/extraction/utils/: data.py
src/information_extraction/evaluation/: evaluate_ocr.py  evaluate_ocr_llm.py
src/information_extraction/notebooks/: infer_donut.ipynb  ocr.ipynb  ollama_experiments.ipynb
src/information_extraction/utils/: data.py  find_dates.py
src/scripts/: boxes_to_polygons.py  config.yaml  crawl.ipynb  crawling.py  detr.ipynb  markets.txt  new_images_to_label.py  prelabel_images.py
src/webapp/: .gitignore  deal_processing.py  main.py
src/webapp/static/css/: style.css
src/webapp/templates/: base.html  index.html  preview.html  upload.html
src/yolo/: create_bbox_labels.py  evaluate_yolo.ipynb  merge_labeled_data.py  train.py  train_configs.yaml  utils.py  visualize_yolo.ipynb
src/yolo/evaluation/: metrics_seg_da.csv  metrics_seg_da_8s.csv
(+16 files in other folders)
