[project]
name = "leaflets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.3.0",
    "easyocr>=1.7.2",
    "fastapi>=0.115.8",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.1.1",
    "ollama>=0.4.7",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pymupdf>=1.25.3",
    "python-doctr>=0.11.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pytorch-lightning>=2.5.0.post0",
    "sentencepiece>=0.2.0",
    "sqlalchemy>=2.0.38",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "ultralytics>=8.3.75",
    "uvicorn>=0.34.0",
    "wandb>=0.19.6",
]
